@@ -5,10 +5,12 @@
 Version 1.2.6 -- CVS
 --------------------
   - Fixed resume draft bug #513521, #514639
-  - Newmail plugin: admin can disablethe use of audio (patch #517698)
+  - Newmail plugin: admin can disable the use of audio (patch #517698)
   - Fixed quoting problem in safe html (patch #516542)
   - SPAM folder no longer special folder (filters plugin)
   - Filtering now happens on folder list refresh (filters plugin)
+  - Added checking of input of the folders page
+  - Made erronous deleting of folders harder (patch #514208)
 	
 Version 1.2.5 -- 22 February 2002
 ---------------------------------
